# CourseCatalog

./: .gitignore  README.md
apps/api/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 44ddb1b6a825_create_courses_table.py
apps/api/src/: add_new_courses.py  auth.py  clear_and_seed.py  config.py  database.py  main.py  models.py  schemas.py  seed_real_courses.py  seed_server.py  verify_courses.py
apps/api/src/services/: course_service.py
apps/api/tests/: test_main.py
apps/web/ififag/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
apps/web/ififag/src/: App.css  App.tsx  index.css  types.ts
apps/web/ififag/src/components/: CourseCard.tsx  CourseDetailModal.tsx  CourseFilters.tsx  ErrorMessage.tsx  LoadingSpinner.tsx  SearchBar.tsx
apps/web/ififag/src/components/dependency/: CourseNode.css  CourseNode.tsx  DependencyVisualization.tsx
apps/web/ififag/src/hooks/: useDependencyGraph.ts
apps/web/ififag/src/pages/: CourseCatalog.tsx  CourseMap.tsx
apps/web/ififag/src/services/: api.ts
