[project]
name = "ififag"
version = "0.1.0"
description = "Course visualisation for Insititute of Informatics at the University of Oslo"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "pytest (>=8.4.1,<9.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.35.0"
ruff = "^0.12.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
